# simple_tui

./: CMakeLists.txt  README.md
include/tui/: color.hpp  event.hpp  key.hpp  log.hpp  menu.hpp  point.hpp  string.hpp  system.hpp  text_format.hpp  text_position.hpp
src/: CMakeLists.txt  menu.cc  system.cc  text_format.cc
test/: CMakeLists.txt  format.cc  hello_world.cc  input.cc  position.cc  smartwatch
